# GraphAdmit

./: .gitignore  430.md  431.md  432.md  LICENSE  README.md  exp1_trace_study.py  fig_e2e.py  pyproject.toml  summary.md  trace_cudagraph.py
benchmarks/: __init__.py  analyze_cuda_graph_failure_modes.py  analyze_flowprefill_trace.py  analyze_staticity_profile.py  analyze_vllm_keycollapse_runtime.py  apply_vllm_staticity_policy.py  bench_e2e.py  build_keycollapse_workload.py  build_latency_policy.py  build_useful_coverage_policy.py  compare_keycollapse_probes.py  compositional_cuda_graph_microbench.py  dinfer_morspec_offline.py  dinfer_qwentrace_offline.py  evaluate_staticity_policy.py  export_staticity_runtime_policy.py  fixed_arena_keycollapse_poc.py  flowprefill_morspec_workload.py  llada2_dinfer_graph_generate.py  llada2_dinfer_graph_probe.py  llada2_dinfer_kvcache_graph_generate.py  llada2_hf_staticity_e2e.py  llada2_staticity_e2e.py  make_strict_online_policy.py  merge_vllm_flowprefill_results.py  morspec_loader.py  network_dynamic_graph.py  online_admission_policy_refresh.py  plan_residual_capture_policy.py  plot_figure1_motivation.py  probe_full_graph.py  profile_staticity_gaps.py  ragged_full_e2e.py  real_e2e.py  real_e2e_v2.py  real_e2e_v3.py  real_e2e_v4.py  repeat_workload.py  run_staticity_runtime_replay.py  search_dinfer_staticity_policy.py  (+20 more)
graphadmit/: __init__.py  cli.py  policy.py  vllm.py
patches/: vllm_staticity.patch  vllm_staticity.patch.manifest.json
prefill_graph/: __init__.py  staticize_attention.py
results/: live_obs_qwen35_35b_16.jsonl  (+26 more)
(+36 files in other folders)
