[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphadmit"
version = "0.1.0"
description = "Online CUDA Graph admission for dynamic LLM serving workloads"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "GraphAdmit authors"}
]
keywords = [
  "cuda-graph",
  "llm-serving",
  "vllm",
  "sglang",
  "online-admission",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
torch = ["torch"]
dev = ["pytest"]

[project.scripts]
graphadmit = "graphadmit.cli:main"

[tool.setuptools]
packages = {find = {include = ["graphadmit*", "prefill_graph*", "benchmarks*"]}}

[tool.setuptools.package-data]
graphadmit = ["resources/*"]
